src/test/ui/suggestions/field-access.stderr
error[E0308]: mismatched types
  --> $DIR/field-access.rs:12:12
   |
LL |     Fst,
   |     --- unit variant defined here
...
LL |     if let B::Fst = a {};
   |            ^^^^^^   - this expression has type `A`
   |            |
   |            expected struct `A`, found enum `B`
   |
help: you might have meant to use field `b` of type `B`
   |
LL |     if let B::Fst = a.b {};
   |                     ^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
